appId: com.dohack.starter.dev
---
- launchApp
- tapOn: "ejemplo@mail.com"
- "inputRandomEmail"
- "hideKeyboard"
- tapOn:
    text: "INICIAR SESIÓN"
    index: 1
- assertVisible: ".*Hola apollo.*"
